# ConanProjectSample

./: .gitignore  CMakeLists.txt  README.md  conan_upload.bat  conanfile.py  get_package_name.py  run_tests_x86_64_release.bat  sln_generator_x86_64_release.bat
.githooks/: pre-push
cmake/: CMakeLists.txt
cmake/Modules/: CMakeUtil.cmake
src/: CMakeLists.txt
src/private/: Sample.cpp
src/public/: Sample.h  SampleExport.h
unit_tests/: CMakeLists.txt  SampleTests.cpp
